# espresso-engineered

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_RESULTS.md  README.md  fly.toml  netlify.toml  package-lock.json  package.json  pyproject.toml  test-core-integration.ts  test-e2e-workflows.ts  test-full-integration.ts
.github/workflows/: fly-deploy.yml
.kiro/steering/: product.md  structure.md  tech.md
app/: config.py  enums.py  main.py  start.py
app/models/: bag.py  bag_grinder_suggestion.py  barista.py  bean.py  brew.py  roaster.py
app/routes/: __init__.py  bag_grinder_suggestions.py  bags.py  baristas.py  bean_grinder_suggestions.py  brews.py  roasters.py
backend/: .env.example  .gitignore  Dockerfile  README-IMPLEMENTATION.md  README.md  SETUP-COMPLETE.md  jest.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/app/: config.py  main.py
backend/src/: index.ts  test-basic.ts  test-complete.ts  test-connection.ts  (+8 more)
docs/: bean-analysis-targets.md  ee-architecture-v1.md  ee-architecture.md  ee-data-model-v1.md  ee-data-model.md  ee-system-definition-document-v1.md  ee-system-definition-document.md  ee-ui-execution-standard.md
frontend/: .env.example  .gitignore  README.md  components.json  netlify.toml  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
shared/: jest.config.js  package-lock.json  package.json  tsconfig.json
supabase/: create_barista_trigger.sql  schema-reference.md
(+377 files in other folders)
