[project]
name = "espresso-engineered"
version = "0.1.0"
description = ""
authors = [
    {name = "nickabee",email = "nickabeelee@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "supabase (>=2.15.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)"
]

[tool.poetry.scripts]
start = "app.start:run"

[[tool.poetry.packages]]
include = "app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
